issue-tracker and create a new issue links updated.

--- a/README.adoc
+++ b/README.adoc
@@ -147,8 +147,8 @@ You can also chat with the community on https://gitter.im/spring-projects/spring
 Spring Data uses JIRA as issue tracking system to record bugs and feature requests. If you want to raise an issue, please follow the recommendations below:
 
 * Before you log a bug, please search the
-https://jira.spring.io/browse/DATACOUCH[issue tracker] to see if someone has already reported the problem.
-* If the issue doesn’t already exist, https://jira.spring.io/browse/DATACOUCH[create a new issue].
+https://github.com/spring-projects/spring-data-couchbase/issues[issue tracker] to see if someone has already reported the problem.
+* If the issue doesn’t already exist, https://github.com/spring-projects/spring-data-couchbase/issues/new[create a new issue].
 * Please provide as much information as possible with the issue report, we like to know the version of Spring Data that you are using and JVM version.
 * If you need to paste code, or include a stack trace use JIRA `{code}…{code}` escapes before and after your text.
 * If possible try to create a test-case or project that replicates the issue. Attach a link to your code or a compressed file containing your code.
