--- a/src/main/asciidoc/preface.adoc
+++ b/src/main/asciidoc/preface.adoc
@@ -8,10 +8,10 @@ This reference documentation describes the general usage of the Spring Data Couc
 == Project Information
 
 * Version control - https://github.com/spring-projects/spring-data-couchbase
-* Bugtracker - https://jira.springsource.org/browse/DATACOUCH
-* Release repository - https://repo.spring.io/libs-release
-* Milestone repository - https://repo.spring.io/libs-milestone
-* Snapshot repository - https://repo.spring.io/libs-snapshot
+* Bugtracker - https://github.com/spring-projects/spring-data-couchbase/issues
+* Release repository - https://repo1.maven.org/maven2
+* Milestone repository - https://repo.spring.io/milestone
+* Snapshot repository - https://repo.spring.io/snapshot
 
 [preface]
 include::migrating.adoc[leveloffset=+1]
