--- a/src/main/antora/modules/ROOT/pages/couchbase/entity.adoc
+++ b/src/main/antora/modules/ROOT/pages/couchbase/entity.adoc
@@ -3,7 +3,7 @@
 
 This chapter describes how to model Entities and explains their counterpart representation in Couchbase Server itself.
 
-include::{spring-data-commons-docs}/object-mapping.adoc[leveloffset=+1]
+include::{commons}@data-commons::page$object-mapping.adoc[leveloffset=+1]
 
 [[basics]]
 == Documents and Fields
