--- a/src/main/antora/modules/ROOT/pages/couchbase/configuration.adoc
+++ b/src/main/antora/modules/ROOT/pages/couchbase/configuration.adoc
@@ -9,6 +9,7 @@ This chapter describes the common installation and configuration steps needed wh
 All versions intended for production use are distributed across Maven Central and the Spring release repository.
 As a result, the library can be included like any other maven dependency:
 
+[[configuration]]
 == Configuration
 .Including the dependency through maven
 ====
@@ -27,6 +28,7 @@ This will pull in several dependencies, including the underlying Couchbase Java 
 You can also grab snapshots from the https://repo.spring.io/ui/repos/tree/General/snapshot/org/springframework/data/spring-data-couchbase[spring snapshot repository] ( \https://repo.spring.io/snapshot ) and milestone releases from the https://repo.spring.io/ui/repos/tree/General/milestone/org/springframework/data/spring-data-couchbase[spring milestone repository] ( \https://repo.spring.io/milestone ).
 Here is an example on how to use the current SNAPSHOT dependency:
 
+[[snapshot-configuration]]
 == Snapshot Configuration
 
 .Using a snapshot version
@@ -47,6 +49,7 @@ Here is an example on how to use the current SNAPSHOT dependency:
 ----
 ====
 
+[[overriding-the-couchbase-sdk-version]]
 == Overriding the Couchbase SDK Version
 
 Some users may wish to use a Couchbase Java SDK version different from the one referenced in a Spring Data Couchbase release for the purpose of obtaining bug and vulnerability fixes.  Since Couchbase Java SDK minor version releases are backwards compatible, this version of Spring Data Couchbase is compatible and supported with any 3.x version of the Couchbase Java SDK newer than the one specified in the release dependencies.  To change the Couchbase Java SDK version used by Spring Data Couchbase, simply override the dependency in the application pom.xml as follows:
@@ -111,7 +114,7 @@ Only Java config is supported (XML config has been removed in 4.0).
 [[configuration-java]]
 == Annotation-based Configuration ("JavaConfig")
 
-To get started, all you need to do is subclcass the `AbstractCouchbaseConfiguration` and implement the abstract methods.
+To get started, all you need to do is subclass the `AbstractCouchbaseConfiguration` and implement the abstract methods.
 
 .Extending the `AbstractCouchbaseConfiguration`
 ====
@@ -165,27 +168,31 @@ Override `typeKey()` (for example to return `MappingCouchbaseConverter.TYPEKEY_S
 name of said attribute.
 
 If you start your application, you should see Couchbase INFO level logging in the logs, indicating that the underlying
-Couchbase Java SDK is connecting to the database. If any errors are reported, make sure that the given credentials
+Couchbase Java SDK is connecting to the database.If any errors are reported, make sure that the given credentials
 and host information are correct.
 
 
+[[configuring-multiple-buckets]]
 == Configuring Multiple Buckets
 
-To leverage multi-bucket repositories, implement the methods below in your Config class.  The config*OperationsMapping methods configure the mapping of entity-objects to buckets.  Be careful with the method names - using a method name that is a Bean will result in the value of that bean being used instead of the result of the method. 
+To leverage multi-bucket repositories, implement the methods below in your Config class.
+The config*OperationsMapping methods configure the mapping of entity-objects to buckets.
+Be careful with the method names - using a method name that is a Bean will result in the value of that bean being used instead of the result of the method.
 
-This example maps Person -> protected,  User -> mybucket, and everything else goes to getBucketName(). Note that this only maps calls through the Repository.
+This example maps Person -> protected, User -> mybucket, and everything else goes to getBucketName().
+Note that this only maps calls through the Repository.
 
 ====
 [source,java]
 ----
-@Override 
+@Override
 public void configureReactiveRepositoryOperationsMapping(ReactiveRepositoryOperationsMapping baseMapping) {
  try {
   ReactiveCouchbaseTemplate personTemplate = myReactiveCouchbaseTemplate(myCouchbaseClientFactory("protected"),new MappingCouchbaseConverter());
   baseMapping.mapEntity(Person.class,  personTemplate); // Person goes in "protected" bucket
   ReactiveCouchbaseTemplate userTemplate = myReactiveCouchbaseTemplate(myCouchbaseClientFactory("mybucket"),new MappingCouchbaseConverter());
   baseMapping.mapEntity(User.class,  userTemplate); // User goes in "mybucket"
-  // everything else goes in getBucketName() 
+  // everything else goes in getBucketName()
  } catch (Exception e) {
   throw e;
  }
@@ -197,7 +204,7 @@ public void configureRepositoryOperationsMapping(RepositoryOperationsMapping bas
   baseMapping.mapEntity(Person.class,  personTemplate); // Person goes in "protected" bucket
   CouchbaseTemplate userTemplate = myCouchbaseTemplate(myCouchbaseClientFactory("mybucket"),new MappingCouchbaseConverter());
   baseMapping.mapEntity(User.class,  userTemplate); // User goes in "mybucket"
-  // everything else goes in getBucketName() 
+  // everything else goes in getBucketName()
  } catch (Exception e) {
   throw e;
  }
@@ -210,7 +217,7 @@ public ReactiveCouchbaseTemplate myReactiveCouchbaseTemplate(CouchbaseClientFact
  return new ReactiveCouchbaseTemplate(couchbaseClientFactory, mappingCouchbaseConverter);
 }
 
-// do not use couchbaseTemplate for the name of this method, otherwise the value of that been 
+// do not use couchbaseTemplate for the name of this method, otherwise the value of that been
 // will be used instead of the result from this call (the client factory arg is different)
 public CouchbaseTemplate myCouchbaseTemplate(CouchbaseClientFactory couchbaseClientFactory,
   MappingCouchbaseConverter mappingCouchbaseConverter) {
