--- a/src/main/antora/modules/ROOT/pages/index.adoc
+++ b/src/main/antora/modules/ROOT/pages/index.adoc
@@ -15,6 +15,6 @@ https://github.com/spring-projects/spring-data-commons/wiki[Wiki] :: What's New,
 
 Michael Nitschinger, Oliver Gierke, Simon Basle, Michael Reiche, Tigran Babloyan
 
-(C) 2014-2023 The original author(s)
+(C) 2014-{copyright-year} The original author(s)
 
 Copies of this document may be made for your own use and for distribution to others, provided that you do not charge any fee for such copies and further provided that each copy contains this Copyright Notice, whether distributed in print or electronically.
